<resources>
    <string name="ACTION_TOO_FREQUENTLY_26003000">操作过于频繁,请稍后重试</string>
    <string name="CODE_DETECTED_FAILED_NULL_NULL">照片不符合要求</string>
    <string name="CODE_DETECTED_SUCCESS_NULL_NULL">照片符合要求</string>
    <string name="ERROR_CODE_BLUR_NULL_NULL">图片模糊，请持稳手机</string>
    <string name="ERROR_CODE_SUIT_DIS_FALSE_BACK">距离合适，请持稳手机，准备拍照</string>
    <string name="ERROR_CODE_SUIT_DIS_FALSE_FRONT">距离合适，请持稳手机，点击拍照</string>
    <string name="ERROR_CODE_SUIT_DIS_TRUE_NULL">距离合适，请持稳手机</string>
    <string name="ERROR_CODE_TOO_BRIGHT_NULL_NULL">光线太亮，请到光线偏暗处拍照</string>
    <string name="ERROR_CODE_TOO_CLOSE_NULL_NULL">距离太近，请离远一点</string>
    <string name="ERROR_CODE_TOO_DARK_NULL_NULL">光线太暗，请到光线偏亮处拍照</string>
    <string name="ERROR_CODE_TOO_DOWN_TRUE_BACK">手向下移动</string>
    <string name="ERROR_CODE_TOO_FAR_NULL_NULL">距离太远，请靠近一点</string>
    <string name="ERROR_CODE_TOO_LEFT_TRUE_BACK">手向左移动</string>
    <string name="ERROR_CODE_TOO_RIGHT_TRUE_BACK">手向右移动</string>
    <string name="ERROR_CODE_TOO_UP_TRUE_BACK">手向上移动</string>
    <string name="ERROR_CODE_UNDETECTED_FALSE_NULL">请将舌头对准虚线边缘</string>
    <string name="ERROR_CODE_UNDETECTED_TRUE_BACK">请翻转手机，伸出舌头，将摄像头对准舌头</string>
    <string name="ERROR_CODE_UNDETECTED_TRUE_FRONT">请将舌头对准虚线边缘</string>
    <string name="ERROR_CODE_UNKNOWN_NULL_NULL">未知问题</string>
    <string name="FOLLOW_RELATION_NOT_EXIST_26001005">您尚未关注过好友</string>
    <string name="FOLLOW_TOO_MANY_26003001">您最多可关注1000名好友，请先取消其他好友关注，再进行关注</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_checkforupdates_title">新版本检测</string>
    <string name="about_debug_title">调试信息</string>
    <string name="about_feedback_title">意见反馈</string>
    <string name="about_privacy_protocol">&lt;font color=#12B2E4&gt;&lt;u&gt;会员隐私协议&lt;/u&gt;&lt;/font&gt;</string>
    <string name="about_psuh_title">推送测试</string>
    <string name="account_name_pingan">平安一账通</string>
    <string name="account_name_qq">QQ</string>
    <string name="account_name_weibo">微博</string>
    <string name="account_name_weixin">微信</string>
    <string name="action_settings">Settings</string>
    <string name="activity_pull_to_new_page">继续下拉有惊喜</string>
    <string name="activity_pull_to_refresh">下拉刷新</string>
    <string name="activity_release_to_new_page">松开得惊喜</string>
    <string name="ads_label">广告</string>
    <string name="advertist_tip">辅助信息</string>
    <string name="advisory_name_role">%1$s 家庭医生</string>
    <string name="age">年龄</string>
    <string name="album_call_camera_failed">调用相机失败</string>
    <string name="album_title">图片和视频</string>
    <string name="album_video_duration_tips">上传视频时长限制1~15秒</string>
    <string name="album_video_max_size">上传视频大小限制1~10M</string>
    <string name="already_register">该手机号码已被注册,是否直接登录？</string>
    <string name="anydoor_bigitem_appdetailtv_default">6.2m</string>
    <string name="app_activity_rules">活动规则</string>
    <string name="app_advice_with_wifi">建议使用wi-fi下载</string>
    <string name="app_all">全部</string>
    <string name="app_all_selected">全选</string>
    <string name="app_ask_doctor">问问医生</string>
    <string name="app_back">返回</string>
    <string name="app_bt_buy">去购物</string>
    <string name="app_cancel">取消</string>
    <string name="app_close">关闭</string>
    <string name="app_colon">:</string>
    <string name="app_command_invalid">口令已失效</string>
    <string name="app_complete">完成</string>
    <string name="app_consult_online">咨询在线医生</string>
    <string name="app_copy">复制</string>
    <string name="app_delete">删除</string>
    <string name="app_double_zero">00</string>
    <string name="app_forwarding_sale">转发售卖</string>
    <string name="app_forwarding_text">转发图文</string>
    <string name="app_found_new_resource_package">发现最新资源包</string>
    <string name="app_generator_time">生成时间：</string>
    <string name="app_global_net_poor">网络信号差，请检查网络</string>
    <string name="app_goto_get_gift">去领取</string>
    <string name="app_goto_setting">去设置</string>
    <string name="app_gpsclose_please_open">定位服务未开启，请打开开关，并允许平安好医生使用定位服务</string>
    <string name="app_hall_dept_tag_tv">热门群</string>
    <string name="app_hd_plan_add_plan">添加计划</string>
    <string name="app_hd_plan_alarm_plan">计划提醒</string>
    <string name="app_hd_plan_alarm_system">系统通知提醒</string>
    <string name="app_hd_plan_delete_plan">删除计划</string>
    <string name="app_hd_plan_segment">个内容，</string>
    <string name="app_hd_plan_segment_2">人正使用</string>
    <string name="app_hd_plan_segment_3">周期：</string>
    <string name="app_hd_plan_segment_4">内容：</string>
    <string name="app_hd_plan_title">孕期饮食计划</string>
    <string name="app_hd_plan_title_2">预产期</string>
    <string name="app_hd_plan_weight_unit">kg</string>
    <string name="app_health_group">健康圈</string>
    <string name="app_health_hg_forecast">· 预告</string>
    <string name="app_health_monitor_detail">详情</string>
    <string name="app_heigh">高</string>
    <string name="app_hot_post">热门贴子</string>
    <string name="app_i_offline">我已下班!</string>
    <string name="app_just_use">立即使用</string>
    <string name="app_just_view">立即查看</string>
    <string name="app_label_ads">广告</string>
    <string name="app_label_arrived_bottom">已经到底了</string>
    <string name="app_label_chat_top">聊天置顶</string>
    <string name="app_label_close_newsms_notifacation">关闭新消息通知</string>
    <string name="app_label_compute_ovulation">推算当日是排卵日</string>
    <string name="app_label_continue_retry">再接再厉多试试吧~</string>
    <string name="app_label_exchange">去兑换</string>
    <string name="app_label_fake_one_compensate_ten">假一赔十</string>
    <string name="app_label_from">来源：</string>
    <string name="app_label_genuine_low_price">正品低价</string>
    <string name="app_label_how_quick_get_gift">如何快速获得礼品</string>
    <string name="app_label_interrogation_person">问诊人:</string>
    <string name="app_label_luck_bad">手气有点差哦</string>
    <string name="app_label_new">新</string>
    <string name="app_label_pingan_qa">平安质保</string>
    <string name="app_label_please_add_interrogation_persion">请添加问诊人</string>
    <string name="app_label_sms_appointment_to">短信叫号发送至</string>
    <string name="app_label_special_topic">专题</string>
    <string name="app_label_start_topic">进入话题</string>
    <string name="app_label_wechat_myfriends_group">朋友圈~</string>
    <string name="app_logistics_status">物流状态：</string>
    <string name="app_mywork_time">我的工作时间</string>
    <string name="app_name">平安好医生</string>
    <string name="app_network_error_holdon">网络异常，请稍后再试</string>
    <string name="app_newperson_gift">新手礼包</string>
    <string name="app_no_interest">不感兴趣</string>
    <string name="app_number_of_people">人已参加</string>
    <string name="app_ok">确定</string>
    <string name="app_one_key_guahao">一键挂号</string>
    <string name="app_opengps_view_treasurebox">开启定位，查看附近宝箱</string>
    <string name="app_orthopedics">骨科</string>
    <string name="app_out_of_stock">无货</string>
    <string name="app_period_ovulation">排卵期</string>
    <string name="app_private_service">私家医生服务</string>
    <string name="app_private_service_expired">还有364天到期</string>
    <string name="app_privatedoctor_add_member">添加成员</string>
    <string name="app_product_introduction">商品介绍</string>
    <string name="app_quick_go_doctor">快速看病</string>
    <string name="app_rate_100">好评率 %1$s</string>
    <string name="app_record_menses">记经期</string>
    <string name="app_reload">重新加载</string>
    <string name="app_renminbi">¥</string>
    <string name="app_rest">余额</string>
    <string name="app_save">保存</string>
    <string name="app_see_later">以后再说</string>
    <string name="app_setting_private_security">隐私设置和安全性</string>
    <string name="app_setting_private_security_item_webcheck">启用WebKit的安全机制</string>
    <string name="app_setting_private_security_item_webcheck_summer">保护您的设备不受恶意网页的侵害</string>
    <string name="app_sim_slot_first">卡槽1</string>
    <string name="app_sim_slot_second">卡槽2</string>
    <string name="app_standar_zero_time">00:00</string>
    <string name="app_start_use">开始使用</string>
    <string name="app_switch_sort">切换分类</string>
    <string name="app_tips_add_fail">添加失败</string>
    <string name="app_tips_buffer_holdon">正在缓冲，请稍后...</string>
    <string name="app_tips_close_fail">关闭失败</string>
    <string name="app_tips_goshop_drug">去购药</string>
    <string name="app_tips_money">挣钱</string>
    <string name="app_tips_my_private_doctor_service">我的私家\10医生服务</string>
    <string name="app_tips_netbad">隐私协议加载失败\10点击重试</string>
    <string name="app_tips_network_slow">网络不给力</string>
    <string name="app_tips_new_user_gift">1. 活动仅限2017年6月28日之后注册的新用户\10 参与\102. 每位用户最多领取一份新人专项礼包\103. 礼包领取成功后，已发放领取手机账户，请\10 下载并登录平安好医生App进行使用\104. 礼包发放的礼物，优惠券有效期为14天\105. 该活动平安好医生保留最终解释权</string>
    <string name="app_tips_no_more">没有更多了</string>
    <string name="app_tips_o2o_drug">您所在的城市支持1小时送药</string>
    <string name="app_tips_pic_text_share">图文分享</string>
    <string name="app_tips_please_select">请选择</string>
    <string name="app_tips_product_downloaded">商品图片已下载到相册</string>
    <string name="app_zero">0</string>
    <string name="coupon">优惠券</string>
    <string name="health_gold">健康金</string>
    <string name="main_medical_hospital">找医生</string>
    <string name="main_medical_online">医疗首页</string>
    <string name="main_mine">我的</string>
    <string name="my_item_cash">现金</string>
    <string name="my_item_giftcards">健康生活通</string>
    <string name="my_item_order_all_list">全部订单</string>
    <string name="my_item_order_need_pay">待付款</string>
    <string name="my_item_order_ongoing">待收货</string>
    <string name="my_item_order_refund">退款/售后</string>
    <string name="my_item_order_review">待评价</string>
    <string name="my_item_shop_cart">购物车</string>
    <string name="my_order_title">我的订单</string>
    <string name="wallet">卡券</string>
</resources>