<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:background="@android:color/transparent" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@+id/ll_cash" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="25.0dip">
            <TextView android:textSize="17.0sp" android:textColor="@android:color/white" android:ellipsize="end" android:id="@+id/cash_number" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_zero" android:singleLine="true" android:layout_centerInParent="true" />
        </RelativeLayout>
        <TextView android:textSize="12.0sp" android:textColor="@android:color/white" android:ellipsize="end" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/my_item_cash" android:maxLines="1" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@+id/gift_card" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="25.0dip">
            <TextView android:textSize="17.0sp" android:textColor="@android:color/white" android:ellipsize="end" android:id="@+id/gift_card_number" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_zero" android:singleLine="true" android:layout_centerInParent="true" />
        </RelativeLayout>
        <TextView android:textSize="12.0sp" android:textColor="@android:color/white" android:ellipsize="end" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/my_item_giftcards" android:maxLines="1" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@+id/health_money" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="25.0dip">
            <TextView android:textSize="17.0sp" android:textColor="@android:color/white" android:ellipsize="end" android:id="@+id/health_money_number" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_zero" android:singleLine="true" android:layout_centerInParent="true" />
        </RelativeLayout>
        <TextView android:textSize="12.0sp" android:textColor="@android:color/white" android:ellipsize="end" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/health_gold" android:maxLines="1" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@+id/wallet" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="25.0dip">
            <TextView android:textSize="17.0sp" android:textColor="@android:color/white" android:ellipsize="end" android:id="@+id/wallet_number" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_zero" android:singleLine="true" android:layout_centerInParent="true" />
        </RelativeLayout>
        <TextView android:textSize="12.0sp" android:textColor="@android:color/white" android:ellipsize="end" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wallet" android:maxLines="1" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@+id/coupon" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="25.0dip">
            <TextView android:textSize="17.0sp" android:textColor="@android:color/white" android:ellipsize="end" android:id="@+id/coupon_number" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_zero" android:singleLine="true" android:layout_centerInParent="true" />
            <TextView android:textSize="10.0sp" android:textColor="#ffffffff" android:id="@+id/tv_lable" android:background="@drawable/bg_circle_white_red" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="3.0dip" android:text="@string/app_label_new" />
        </RelativeLayout>
        <TextView android:textSize="12.0sp" android:textColor="@android:color/white" android:ellipsize="end" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/coupon" android:maxLines="1" />
    </LinearLayout>
</LinearLayout>