<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/circle_radius_ffffff_tras" android:paddingBottom="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@+id/rl_title" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="15.0sp" android:textColor="#ff333333" android:background="@android:color/transparent" android:paddingLeft="12.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:text="@string/my_order_title" />
        <LinearLayout android:orientation="vertical" android:id="@+id/ll_order_list" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:layout_alignParentRight="true">
            <TextView android:textSize="12.0sp" android:textColor="#ff999999" android:layout_gravity="center_horizontal" android:paddingRight="12.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/my_item_order_all_list" android:drawableRight="@drawable/icon_arrow_right_gray" android:drawablePadding="6.0dip" />
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout android:orientation="horizontal" android:background="@android:color/transparent" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_below="@id/rl_title">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@+id/ll_shop_cart" android:background="@android:color/transparent" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
            <RelativeLayout android:id="@+id/rl_shop_cart" android:layout_width="40.0dip" android:layout_height="33.0dip">
                <ImageView android:layout_width="25.0dip" android:layout_height="25.0dip" android:src="@drawable/icon_mine_shop_cart" android:layout_centerInParent="true" />
                <TextView android:textSize="10.0sp" android:textColor="@android:color/white" android:gravity="center" android:id="@+id/tv_shop_cart_num" android:padding="1.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:layout_alignParentRight="true" />
            </RelativeLayout>
            <TextView android:textSize="12.0sp" android:textColor="#ff666666" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="@string/my_item_shop_cart" android:layout_below="@id/rl_shop_cart" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@+id/rl_order_need_pay" android:background="@android:color/transparent" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
            <RelativeLayout android:id="@+id/rl_need_pay" android:layout_width="40.0dip" android:layout_height="33.0dip">
                <ImageView android:layout_width="25.0dip" android:layout_height="25.0dip" android:src="@drawable/icon_coinbag" android:layout_centerInParent="true" />
                <TextView android:textSize="10.0sp" android:textColor="@android:color/white" android:gravity="center" android:id="@+id/tv_need_pay_num" android:background="@drawable/shape_order_tip" android:padding="1.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:layout_alignParentRight="true" />
            </RelativeLayout>
            <TextView android:textSize="12.0sp" android:textColor="#ff666666" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="@string/my_item_order_need_pay" android:layout_below="@id/rl_need_pay" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@+id/rl_order_ongoing" android:background="@android:color/transparent" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
            <RelativeLayout android:id="@+id/rl_ongoing" android:layout_width="40.0dip" android:layout_height="33.0dip">
                <ImageView android:layout_width="25.0dip" android:layout_height="25.0dip" android:src="@drawable/icon_car" android:layout_centerInParent="true" />
                <TextView android:textSize="10.0sp" android:textColor="@android:color/white" android:gravity="center" android:id="@+id/tv_ongoing_num" android:background="@drawable/shape_order_tip" android:padding="1.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:layout_alignParentRight="true" />
            </RelativeLayout>
            <TextView android:textSize="12.0sp" android:textColor="#ff666666" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="@string/my_item_order_ongoing" android:layout_below="@id/rl_ongoing" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@+id/rl_order_finish" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
            <RelativeLayout android:id="@+id/rl_finish" android:layout_width="40.0dip" android:layout_height="33.0dip">
                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/icon_thumb" android:layout_centerInParent="true" />
                <TextView android:textSize="10.0sp" android:textColor="@android:color/white" android:gravity="center" android:id="@+id/tv_review_num" android:background="@drawable/shape_order_tip" android:padding="1.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:layout_alignParentRight="true" />
            </RelativeLayout>
            <TextView android:textSize="12.0sp" android:textColor="#ff666666" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="@string/my_item_order_review" android:layout_below="@id/rl_finish" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@+id/rl_complain" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
            <RelativeLayout android:layout_width="40.0dip" android:layout_height="33.0dip">
                <ImageView android:layout_width="25.0dip" android:layout_height="25.0dip" android:src="@drawable/icon_refund" android:layout_centerInParent="true" />
                <TextView android:textSize="10.0sp" android:textColor="@android:color/white" android:gravity="center" android:id="@+id/tv_complain_num" android:background="@drawable/shape_order_tip" android:padding="1.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:layout_alignParentRight="true" />
            </RelativeLayout>
            <TextView android:textSize="12.0sp" android:textColor="#ff666666" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="@string/my_item_order_refund" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>